--- a/index.html
+++ b/index.html
@@ -6,6 +6,11 @@
     <title>Document</title>
 </head>
 <body>
-    TeerthaPoojaShop
+    Teerthapujashop
+    <br>
+    Website currently in building progress <br>
+    Customers, please note that the website will be available in a few days
+    <br>
+    From CEO, Teerthapujashop - Sankya Shet
 </body>
 </html>
