--- a/index.html
+++ b/index.html
@@ -6,11 +6,11 @@
     <title>Document</title>
 </head>
 <body>
-    Teerthapujashop
+    TirthaPujaShop
     <br>
-    Website currently in building progress <br>
-    Customers, please note that the website will be available in a few days
+    Please note that the website is currently in progress!
     <br>
-    From CEO, Teerthapujashop - Sankya Shet
+    From CEO, Teerthapujashop - Sankya Shet <br>
+    Built by - Shreekrishna (without salary)
 </body>
 </html>
